--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,6 +37,46 @@ jobs:
         if: matrix.os == 'windows-latest'
         run: pnpm run build:win
 
+      - name: Upload Artifact for macOS
+        if: matrix.os == 'macos-latest'
+        uses: actions/upload-artifact@v4
+        with:
+          name: release-macos
+          path: |
+            dist/*.dmg
+            dist/*.tar.gz
+            dist/latest-mac.yml
+          retention-days: 1
+
+      - name: Upload Artifact for Ubuntu
+        if: matrix.os == 'ubuntu-latest'
+        uses: actions/upload-artifact@v4
+        with:
+          name: release-linux
+          path: |
+            dist/*.AppImage
+            dist/*.deb
+            dist/*.tar.gz
+            dist/latest-linux.yml
+          retention-days: 1
+
+      # - name: Prepare and Upload Artifact for Windows
+      #   if: matrix.os == 'windows-latest'
+      #   run: mv release/latest.yml release/latest-windows.yml
+      #   shell: bash
+
+      - name: Upload Artifact for Windows
+        if: matrix.os == 'windows-latest'
+        uses: actions/upload-artifact@v4
+        with:
+          name: release-windows
+          path: |
+            dist/*.exe
+            dist/*.msi
+            dist/*.zip
+            dist/latest.yml
+          retention-days: 1
+
       - name: release
         uses: softprops/action-gh-release@v2
         with:
