--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "typecheck:web": "tsc --noEmit -p tsconfig.web.json --composite false"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/modifiers": "^7.0.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^3.0.0",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -33,6 +37,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "electron-updater": "^6.1.8",
+    "nanoid": "^5.0.7",
     "pdf-lib": "^1.17.1",
     "react-hot-toast": "^2.4.1",
     "sharp": "^0.33.4",
